# networking-spp

./: .coveragerc  .gitreview  .stestr.conf  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  README.md  README.rst  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
devstack/: plugin.sh  settings  spp-config-build.py  spp-config-destroy.py  start-spp-services
devstack/image/: build_image.sh
devstack/image/files/: dpdk_setup.sh
doc/source/: architecture.rst  conf.py  customization.rst  devstack.rst  index.rst  installation.rst  introduction.rst  taas.rst  usage.rst  using-tempest-plugin.rst
doc/source/configuration/: index.rst
doc/source/install/: index.rst  install.rst
doc/source/reference/: index.rst
doc/source/user/: index.rst
networking_spp/: __init__.py  _i18n.py
networking_spp/agent/: config.py  spp_agent.py  spp_api.py  spp_manager.py
networking_spp/common/: etcd_client.py  etcd_config.py  etcd_key.py
networking_spp/mech_driver/: mech_spp.py
networking_spp/service_drivers/: taas.py
networking_spp/tests/: test_networking_spp.py
networking_spp/tests/dpdk-app/l2_ping_pong/: Makefile  l2_ping_pong.c
networking_spp/tests/tempest/: plugin.py
networking_spp/tests/unit/: test_mech_spp.py  test_service_taas.py  test_spp_agent.py  test_spp_api.py  test_spp_manager.py
playbooks/networking-spp-tempest/: 77timeoutextend  build_compute.sh.j2  build_controller.sh.j2  cp_local.conf.j2  ct_local.conf.j2  networking-spp-tempest.yaml  run.yaml  run_tempest.sh.j2  send_job.sh.j2
releasenotes/source/: conf.py  index.rst
(+2 files in other folders)
