[metadata]
name = networking-spp
summary = SPP mechanism driver
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    networking_spp

[entry_points]
console_scripts =
    neutron-spp-agent = networking_spp.agent.spp_agent:main
neutron.ml2.mechanism_drivers =
    spp = networking_spp.mech_driver.mech_spp:SppMechanismDriver
tempest.test_plugins =
    networking_spp = networking_spp.tests.tempest.plugin:NetworkingSppTempestPlugin

[build_sphinx]
all-files = 1
warning-is-error = 1
source-dir = doc/source
build-dir = doc/build

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = networking_spp/locale
domain = networking_spp

[update_catalog]
domain = networking_spp
output_dir = networking_spp/locale
input_file = networking_spp/locale/networking_spp.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = networking_spp/locale/networking_spp.pot
